# taller-sesion-02

./: README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: auth.py  config.py  main.py  routers.py  schemas.py
frontend/: .env.example  README.md  index.html
frontend/src/: App.jsx  index.css
frontend/src/pages/: LoginPage.jsx  WelcomePage.jsx
frontend/src/services/: auth.js
